[project]
name = "mimic"
version = "0.1.0"
requires-python = "==3.7.*"
dependencies = [
    "black==23.3.0",
    "certifi>=2026.4.22",
    "cffi>=1.15.1",
    "charset-normalizer==3.4.6",
    "click==8.1.8",
    "cycler==0.11.0",
    "fonttools==4.38.0",
    "idna==3.10",
    "importlib-metadata==6.7.0",
    "joblib>=1.3.2",
    "kiwisolver==1.4.5",
    "matplotlib==3.5.3",
    "mypy-extensions==1.0.0",
    "numpy>=1.21.6",
    "packaging==24.0",
    "pandas>=1.1.5",
    "pathspec==0.11.2",
    "pillow==9.5.0",
    "platformdirs==4.0.0",
    "pycparser>=2.21",
    "pyflakes==3.0.1",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "requests==2.31.0",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "six>=1.17.0",
    "threadpoolctl>=3.1.0",
    "tomli==2.0.1",
    "torch==1.7.1",
    "torchvision==0.8.2",
    "tqdm==4.67.3",
    "typed-ast==1.5.5",
    "typing-extensions==4.7.1",
    "urllib3==2.0.7",
    "zipp==3.15.0",
]
[[tool.uv.index]]
name = "pytorch-cu110"
url = "https://download.pytorch.org/whl/cu110"
explicit = false
